tests/functional/fail/async.stderr
error: pure_functional: attribute on async fn is not supported
 --> tests/functional/fail/async.rs:3:1
  |
3 | #[pure_functional]
  | ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `pure_functional` (in Nightly builds, run with -Z macro-backtrace for more info)
